# better-notes-kindle-scribe

./: .gitignore  Dockerfile  Makefile  README.md  meson.build
.github/workflows/: build.yml
kual/betternotes/: config.xml  menu.json
src/: app.cpp  app.h  canvas.cpp  canvas.h  filebrowser.cpp  filebrowser.h  index.cpp  index.h  inkfb.cpp  inkfb.h  json.cpp  json.h  keyboard.cpp  keyboard.h  lasso.cpp  lasso.h  links.cpp  links.h  main.cpp  markdown.cpp  markdown.h  note_io.cpp  note_io.h  ocr.cpp  ocr.h  pages.cpp  pages.h  pdf_export.cpp  pdf_export.h  pen.cpp  pen.h  strokes.cpp  strokes.h  templates.cpp  templates.h  toolbar.cpp  toolbar.h  tools.cpp  tools.h  util.cpp  (+1 more)
